[fix] Title alignment
Incl:
+ fixed padding around title

--- a/public/pgstyle.css
+++ b/public/pgstyle.css
@@ -14,6 +14,7 @@ body
   font-family: sans-serif;
   font-size: 20px;
   line-height: 1.4;
+  margin: 0;
 }
 
 a
@@ -42,11 +43,13 @@ table, ul
 h1.nav
 {
   background: rgb(255, 0, 0, .5);
-  /*position: absolute;*/
-  margin: 0;
-  /*top: 0;
+  padding: 0 .5em;
+  /*
+  position: absolute;
+  top: 0;
   left: 0;
-  width: 100vw;*/
+  width: 100vw;
+  */
 }
 
 h2
